<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:drawableLeft="@android:drawable/ic_search_category_default"
            android:drawablePadding="8dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:scaleType="center"
            android:src="@android:drawable/ic_search_category_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBaseMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_normal"
            android:padding="8dp"
            android:textColor="@color/colorWhite"
            android:text="@string/common_base_map" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnIndoorMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_normal"
            android:padding="8dp"
            android:textColor="@color/colorWhite"
            android:text="@string/common_indoor_map" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPOIMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_normal"
            android:padding="8dp"
            android:textColor="@color/colorWhite"
            android:text="@string/common_poi_map" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRadarNearbyMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_normal"
            android:padding="8dp"
            android:textColor="@color/colorWhite"
            android:text="@string/common_radar_nearby_map" />
    </LinearLayout>

</LinearLayout>
