<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTitleBar"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:gravity="left|center_vertical"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_info" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/common_name"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTitleBar"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:gravity="left|center_vertical"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_localtion" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/common_address"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTitleBar"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:gravity="left|center_vertical"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_phone" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/common_phone"
            android:textColor="@color/colorWhite" />

    </LinearLayout>
</LinearLayout>
