<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.baidu.mapapi.map.MapView
        android:id="@+id/mv_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true" />

    <LinearLayout
        android:id="@+id/lltRadio"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rgSearchType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="驾车" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="步行" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="骑行" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/common_bus" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltSearch"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/lltRadio"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/etKeyword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="4"
            android:dropDownHeight="wrap_content"
            android:fontFeatureSettings="1"
            android:hint="@string/common_input_key_word_to_search" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/selector_button_normal"
            android:padding="8dp"
            android:text="@string/common_search"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lltSearch"
        android:layout_marginLeft="16dp"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSearchResult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/common_search_result" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="96dp"
        android:layout_marginRight="10dp"
        android:background="@color/transparent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLocal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_local_blue" />
    </LinearLayout>
</RelativeLayout>